--- a/index.html
+++ b/index.html
@@ -237,73 +237,84 @@
                 const dbInstance = ref(null);
                 const fireOps = ref(null);
 
-                // --- Initial Data (完整 8 天詳細行程，含早餐與 Day 8 晚班機) ---
+                // --- Initial Data (完全依照 Excel 截圖還原，細節全補上) ---
                 const initialItinerary = [
                     // Day 1: 2/11 (二)
                     { id: '1-0', date: '2026-02-11', time: '03:15', title: '5J311 飛往馬尼拉', locationName: 'TPE T1 -> MNL T3', type: 'transport', tag: '轉機' },
                     { id: '1-1', date: '2026-02-11', time: '05:45', title: '抵達馬尼拉 T3', locationName: 'MNL T3', type: 'note', tag: '需領行李' },
-                    { id: '1-1-b', date: '2026-02-11', time: '07:00', title: '機場早餐', locationName: 'MNL T3 美食街', type: 'food', tag: 'Jollibee' },
                     { id: '1-2', date: '2026-02-11', time: '10:50', title: '5J585 飛往宿霧', locationName: 'MNL T3 -> CEB', type: 'transport' },
-                    { id: '1-3', date: '2026-02-11', time: '12:25', title: '抵達宿霧', locationName: 'Mactan Airport', type: 'transport' },
-                    { id: '1-4', date: '2026-02-11', time: '13:00', title: '前往飯店 Check-in', locationName: '宿務派克蘭國際大飯店', type: 'hotel', tag: '含早', lat: 10.317, lng: 123.903 },
-                    { id: '1-5', date: '2026-02-11', time: '14:00', title: '換匯 & 午餐', locationName: 'Ayala Center', type: 'food', tag: 'House of Lechon' },
-                    { id: '1-6', date: '2026-02-11', time: '18:00', title: '晚餐: Sugbo Mercado', locationName: 'IT Park 夜市', type: 'food', tag: '推薦' },
+                    { id: '1-3', date: '2026-02-11', time: '12:00', title: '抵達宿霧 & Grab', locationName: 'Mactan Airport', type: 'transport', tag: '叫車' },
+                    { id: '1-4', date: '2026-02-11', time: '13:00', title: '飯店 Check-in', locationName: '宿務派克蘭國際大飯店', type: 'hotel', lat: 10.317, lng: 123.903 },
+                    { id: '1-5', date: '2026-02-11', time: '14:00', title: 'Mall 附近換錢', locationName: 'Ayala Center Cebu', type: 'activity', tag: '匯率佳' },
+                    { id: '1-6', date: '2026-02-11', time: '15:00', title: '午餐 Mall (Kuya J / House of Lechon)', locationName: 'Ayala Center', type: 'food', tag: '推薦' },
+                    { id: '1-7', date: '2026-02-11', time: '18:00', title: '夜市 (Sugbo Mercado)', locationName: 'IT Park', type: 'food', tag: '晚餐' },
 
                     // Day 2: 2/12 (三)
-                    { id: '2-0', date: '2026-02-12', time: '07:30', title: '飯店自助早餐', locationName: 'Parklane Hotel', type: 'food', tag: 'Buffet' },
-                    { id: '2-1', date: '2026-02-12', time: '09:00', title: 'Cebu Ocean Park', locationName: 'SM Seaside 旁', type: 'spot', lat: 10.283, lng: 123.882 },
-                    { id: '2-2', date: '2026-02-12', time: '12:00', title: 'Aqua Dining 午餐', locationName: '海底隧道旁', type: 'food', tag: '網美餐' },
-                    { id: '2-3', date: '2026-02-12', time: '14:00', title: '古蹟巡禮', locationName: '麥哲倫十字架/聖嬰大教堂', type: 'spot' },
-                    { id: '2-4', date: '2026-02-12', time: '18:00', title: '晚餐: Texas Roadhouse', locationName: 'SM Seaside', type: 'food', tag: '牛排推薦' },
+                    { id: '2-0', date: '2026-02-12', time: '07:30', title: '飯店早餐', locationName: 'Parklane Hotel', type: 'food' },
+                    { id: '2-1', date: '2026-02-12', time: '09:00', title: '抵達 Cebu Ocean Park', locationName: 'SM Seaside 旁', type: 'spot', lat: 10.283, lng: 123.882 },
+                    { id: '2-2', date: '2026-02-12', time: '10:00', title: 'Grab 移動', locationName: '', type: 'transport' },
+                    { id: '2-3', date: '2026-02-12', time: '11:00', title: '水族館網美餐 (Aqua Dining)', locationName: '海底隧道旁', type: 'food', tag: '需預約' },
+                    { id: '2-4', date: '2026-02-12', time: '12:00', title: 'SM Seaside Mall 逛街', locationName: 'Blackbeard Seafood', type: 'activity' },
+                    { id: '2-5', date: '2026-02-12', time: '13:00', title: '麥哲倫十字架', locationName: 'Magellans Cross', type: 'spot' },
+                    { id: '2-6', date: '2026-02-12', time: '14:00', title: '聖嬰大教堂', locationName: 'Basilica del Santo Niño', type: 'spot' },
+                    { id: '2-7', date: '2026-02-12', time: '15:00', title: '聖佩德羅堡', locationName: 'Fort San Pedro', type: 'spot' },
+                    { id: '2-8', date: '2026-02-12', time: '18:00', title: '晚餐 (Texas Roadhouse)', locationName: 'SM Seaside', type: 'food', tag: '推薦' },
 
                     // Day 3: 2/13 (四)
-                    { id: '3-0', date: '2026-02-13', time: '07:30', title: '飯店自助早餐', locationName: 'Parklane Hotel', type: 'food', tag: 'Buffet' },
+                    { id: '3-0', date: '2026-02-13', time: '07:30', title: '飯店早餐', locationName: 'Parklane Hotel', type: 'food' },
                     { id: '3-1', date: '2026-02-13', time: '10:40', title: '抵達港口 Pier 1', locationName: 'Cebu Pier 1', type: 'note', tag: '買午餐' },
-                    { id: '3-2', date: '2026-02-13', time: '11:40', title: 'Ocean Jet 開船', locationName: '前往薄荷島', type: 'transport', tag: 'KKDay票' },
-                    { id: '3-3', date: '2026-02-13', time: '14:00', title: '抵達 Tagbilaran', locationName: 'Bohol', type: 'transport', tag: '包車接送' },
-                    { id: '3-4', date: '2026-02-13', time: '15:00', title: 'Check-in 邦勞飯店', locationName: 'Best Western Plus (Alona)', type: 'hotel', tag: '含早' },
-                    { id: '3-5', date: '2026-02-13', time: '18:00', title: '晚餐: Mist', locationName: '森林系網美餐廳', type: 'food', tag: '需訂位' },
+                    { id: '3-2', date: '2026-02-13', time: '11:40', title: '搭船 Ocean Jet', locationName: '前往薄荷島', type: 'transport', tag: 'KKDay票' },
+                    { id: '3-3', date: '2026-02-13', time: '14:00', title: '抵達 Tagbilaran', locationName: 'Bohol', type: 'transport', tag: '包車1200p' },
+                    { id: '3-4', date: '2026-02-13', time: '15:00', title: '飯店 Check-in', locationName: 'Best Western Plus (Alona)', type: 'hotel' },
+                    { id: '3-5', date: '2026-02-13', time: '16:00', title: '度假村玩', locationName: 'Swimming Pool', type: 'activity' },
+                    { id: '3-6', date: '2026-02-13', time: '18:00', title: '海灘夜市或附近餐廳', locationName: 'Giuseppe Pizzeria', type: 'food', tag: '推薦' },
 
                     // Day 4: 2/14 (五)
-                    { id: '4-0', date: '2026-02-14', time: '07:30', title: '飯店自助早餐', locationName: 'Best Western', type: 'food', tag: 'Buffet' },
-                    { id: '4-1', date: '2026-02-14', time: '09:00', title: 'Napaling Reef', locationName: '沙丁魚風暴 (水下攝影)', type: 'spot' },
-                    { id: '4-2', date: '2026-02-14', time: '11:00', title: 'Hinagdanan Cave', locationName: '鐘乳石洞 (不游泳)', type: 'spot' },
-                    { id: '4-3', date: '2026-02-14', time: '12:00', title: '午餐: Ubeco', locationName: '韓系網美店', type: 'food', tag: '首選' },
-                    { id: '4-4', date: '2026-02-14', time: '14:00', title: '度假村休息', locationName: 'Best Western', type: 'spot' },
-                    { id: '4-5', date: '2026-02-14', time: '18:00', title: '晚餐: The Buzz Cafe', locationName: 'Alona Beach', type: 'food', tag: '蜜蜂農場分店' },
+                    { id: '4-0', date: '2026-02-14', time: '07:30', title: '飯店早餐', locationName: 'Best Western', type: 'food' },
+                    { id: '4-1', date: '2026-02-14', time: '09:00', title: 'Napaling Reef', locationName: '沙丁魚浮潛', type: 'spot' },
+                    { id: '4-2', date: '2026-02-14', time: '11:00', title: 'Hinagdanan Cave', locationName: 'No Swim', type: 'spot' },
+                    { id: '4-3', date: '2026-02-14', time: '12:00', title: '午餐: Ubeco Restaurant', locationName: '韓系網美店', type: 'food', tag: '指定' },
+                    { id: '4-4', date: '2026-02-14', time: '14:00', title: '度假村玩', locationName: 'Best Western', type: 'activity' },
+                    { id: '4-5', date: '2026-02-14', time: '18:00', title: '海灘夜市或附近餐廳', locationName: 'Mist', type: 'food', tag: '推薦' },
 
                     // Day 5: 2/15 (六)
-                    { id: '5-0', date: '2026-02-15', time: '05:30', title: '簡易早餐', locationName: '飯店餐盒/麵包', type: 'food', tag: '早起' },
-                    { id: '5-1', date: '2026-02-15', time: '06:00', title: '跳島一日遊', locationName: 'Balicasag (海龜/斷層)', type: 'spot', tag: '包船' },
+                    { id: '5-0', date: '2026-02-15', time: '05:30', title: '飯店早餐', locationName: 'Best Western', type: 'food', tag: '早起' },
+                    { id: '5-1', date: '2026-02-15', time: '06:00', title: '跳島一日遊', locationName: 'Balicasag (海龜)', type: 'spot', tag: '包船1500p' },
                     { id: '5-2', date: '2026-02-15', time: '11:00', title: 'Virgin Island', locationName: '處女島', type: 'spot' },
-                    { id: '5-3', date: '2026-02-15', time: '14:30', title: '換飯店: Villa Kalachuchi', locationName: 'Danao 區', type: 'hotel', tag: '無早' },
-                    { id: '5-4', date: '2026-02-15', time: '18:00', title: '晚餐: Giuseppe Pizzeria', locationName: 'Danao 附近', type: 'food', tag: '窯烤披薩' },
+                    { id: '5-3', date: '2026-02-15', time: '14:00', title: 'Back to villa (拿行李)', locationName: 'Check-out', type: 'transport' },
+                    { id: '5-4', date: '2026-02-15', time: '14:30', title: 'Check in Villa Kalachuchi', locationName: 'Danao 區', type: 'hotel' },
+                    { id: '5-5', date: '2026-02-15', time: '18:00', title: '海灘夜市或附近餐廳', locationName: 'Luna Rossa', type: 'food', tag: '推薦' },
 
                     // Day 6: 2/16 (日)
-                    { id: '6-0', date: '2026-02-16', time: '08:00', title: '自理/簡易早餐', locationName: 'Villa Kalachuchi (有廚房)', type: 'food' },
-                    { id: '6-1', date: '2026-02-16', time: '09:00', title: '陸上包車遊', locationName: 'Bohol 內陸', type: 'transport', tag: '包車' },
-                    { id: '6-2', date: '2026-02-16', time: '10:00', title: '人造森林 & 眼鏡猴', locationName: 'Tarsier Area', type: 'spot' },
-                    { id: '6-3', date: '2026-02-16', time: '12:00', title: 'Rio Verde 午餐', locationName: '漂流竹筏', type: 'food' },
+                    { id: '6-0', date: '2026-02-16', time: '08:00', title: '無早餐有廚房', locationName: 'Villa Kalachuchi', type: 'note' },
+                    { id: '6-1', date: '2026-02-16', time: '09:00', title: '包車一日遊 (6500p)', locationName: 'Bohol 內陸', type: 'transport' },
+                    { id: '6-2', date: '2026-02-16', time: '10:00', title: '人造森林 & 眼鏡猴', locationName: 'Bilar / Tarsier', type: 'spot' },
+                    { id: '6-3', date: '2026-02-16', time: '12:00', title: 'Lunch (Rio Verde Floating)', locationName: '漂流竹筏', type: 'food' },
                     { id: '6-4', date: '2026-02-16', time: '14:00', title: '巧克力山', locationName: 'Chocolate Hills', type: 'spot' },
-                    { id: '6-5', date: '2026-02-16', time: '15:30', title: 'Zipline & ATV', locationName: 'Loboc / Graham', type: 'spot' },
-                    { id: '6-6', date: '2026-02-16', time: '18:00', title: '晚餐: Barwoo', locationName: '韓式創意料理', type: 'food', tag: '排隊名店' },
+                    { id: '6-5', date: '2026-02-16', time: '15:30', title: '玩滑索及纜車 (Loboc)', locationName: 'Ecotourism Park', type: 'spot' },
+                    { id: '6-6', date: '2026-02-16', time: '16:30', title: 'Graham ATV Rental', locationName: 'ATV', type: 'spot' },
+                    { id: '6-7', date: '2026-02-16', time: '17:00', title: 'Back to villa', locationName: 'Villa Kalachuchi', type: 'transport' },
+                    { id: '6-8', date: '2026-02-16', time: '18:00', title: '海灘夜市或附近餐廳', locationName: 'Bohol Bee Farm', type: 'food', tag: '推薦' },
 
                     // Day 7: 2/17 (一)
-                    { id: '7-0', date: '2026-02-17', time: '08:00', title: '自理/簡易早餐', locationName: 'Villa Kalachuchi', type: 'food' },
-                    { id: '7-1', date: '2026-02-17', time: '11:00', title: 'South Farm', locationName: '動物農場', type: 'spot' },
-                    { id: '7-2', date: '2026-02-17', time: '15:30', title: '前往邦勞機場', locationName: 'Panglao Airport', type: 'transport' },
-                    { id: '7-3', date: '2026-02-17', time: '18:20', title: '5J616 飛往馬尼拉', locationName: 'TAG -> MNL', type: 'transport' },
-                    { id: '7-4', date: '2026-02-17', time: '20:00', title: '抵達馬尼拉', locationName: 'MNL T3', type: 'transport', tag: 'Grab Car' },
-                    { id: '7-5', date: '2026-02-17', time: '21:00', title: '入住 Uptown Parksuites', locationName: 'BGC (三越旁)', type: 'hotel' },
-                    { id: '7-6', date: '2026-02-17', time: '21:30', title: '晚餐: Shake Shack', locationName: 'BGC', type: 'food', tag: '簡單吃' },
+                    { id: '7-0', date: '2026-02-17', time: '08:00', title: '無早餐有廚房', locationName: 'Villa Kalachuchi', type: 'note' },
+                    { id: '7-1', date: '2026-02-17', time: '11:00', title: 'Check-out & South Farm', locationName: '動物農場午餐', type: 'spot' },
+                    { id: '7-2', date: '2026-02-17', time: '12:00', title: '餵動物騎馬', locationName: 'South Farm', type: 'activity' },
+                    { id: '7-3', date: '2026-02-17', time: '14:30', title: 'Back to villa (拿行李)', locationName: 'Villa Kalachuchi', type: 'transport' },
+                    { id: '7-4', date: '2026-02-17', time: '15:30', title: '前往邦勞機場', locationName: 'Panglao Airport', type: 'transport' },
+                    { id: '7-5', date: '2026-02-17', time: '18:20', title: '5J616 飛往馬尼拉', locationName: 'TAG -> MNL', type: 'transport' },
+                    { id: '7-6', date: '2026-02-17', time: '20:00', title: '抵達馬尼拉 (Grab Car)', locationName: 'MNL T3', type: 'transport', tag: '勿選Taxi' },
+                    { id: '7-7', date: '2026-02-17', time: '21:00', title: '飯店 Checkin', locationName: 'Uptown Parksuites Tower 2', type: 'hotel' },
+                    { id: '7-8', date: '2026-02-17', time: '21:30', title: '晚餐', locationName: 'Shake Shack', type: 'food', tag: '推薦' },
 
                     // Day 8: 2/18 (二)
-                    { id: '8-0', date: '2026-02-18', time: '09:00', title: 'Wildflour Cafe', locationName: 'Uptown (網美早午餐)', type: 'food', tag: '推薦' },
-                    { id: '8-1', date: '2026-02-18', time: '10:00', title: 'Mind Museum', locationName: 'BGC', type: 'spot', tag: '科學館' },
-                    { id: '8-2', date: '2026-02-18', time: '12:00', title: '午餐: Mamou Meats', locationName: 'Uptown', type: 'food', tag: '🏆5.0⭐' },
-                    { id: '8-3', date: '2026-02-18', time: '15:00', title: 'BGC 區域逛街', locationName: 'High Street', type: 'activity' },
-                    { id: '8-4', date: '2026-02-18', time: '19:00', title: '前往機場 Check-in', locationName: 'MNL T3', type: 'transport' },
-                    { id: '8-5', date: '2026-02-18', time: '23:35', title: '5J310 返台', locationName: 'MNL -> TPE', type: 'transport' }
+                    { id: '8-0', date: '2026-02-18', time: '09:00', title: '無早餐有廚房', locationName: 'Wildflour Cafe', type: 'food', tag: '推薦' },
+                    { id: '8-1', date: '2026-02-18', time: '10:00', title: '逛市區景點', locationName: 'BGC', type: 'activity' },
+                    { id: '8-2', date: '2026-02-18', time: '11:00', title: 'Mind Museum', locationName: 'Jose Yao Campos Park', type: 'spot' },
+                    { id: '8-3', date: '2026-02-18', time: '12:00', title: '午餐', locationName: 'Mamou Meats', type: 'food', tag: '推薦' },
+                    { id: '8-4', date: '2026-02-18', time: '18:00', title: '晚餐', locationName: 'George and Onnie\'s', type: 'food', tag: '推薦' },
+                    { id: '8-5', date: '2026-02-18', time: '19:00', title: '搭飛機 Check-in', locationName: 'MNL T3', type: 'transport' },
+                    { id: '8-6', date: '2026-02-18', time: '23:35', title: '5J310 返台', locationName: 'MNL -> TPE', type: 'transport' }
                 ];
 
                 const tabs = [{ id: 'schedule', label: '行程', icon: 'calendar' }, { id: 'map', label: '地圖', icon: 'map' }];
