--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Version: v49.0 (Fixed Timeline & Verified Navigation Addresses) -->
+織<!-- Version: v49.0 (Fixed Timeline & Verified Navigation Addresses) -->
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
@@ -400,7 +400,7 @@
                     { id: '2-3', date: '2026-02-12', time: '11:00', title: '午餐 Aqua Dining', locationName: 'Aqua Dining', type: 'food', tag: '需預約', lat: 10.283, lng: 123.882, address: 'Aqua Dining, Cebu Ocean Park' },
                     { id: '2-5', date: '2026-02-12', time: '13:00', title: '古蹟巡禮', locationName: '麥哲倫十字架', type: 'spot', lat: 10.293, lng: 123.901, address: 'Magellan\'s Cross Pavilion, Cebu City' },
                     { id: '2-6', date: '2026-02-12', time: '14:00', title: '古蹟巡禮', locationName: '聖嬰大教堂', type: 'spot', lat: 10.2941085, lng: 123.902, address: 'Minor Basilica of the Holy Child of Cebu (Basilica Minore Del Sto. Niño de Cebu)' },
-                    { id: '2-8', date: '2026-02-12', time: '18:00', title: '晚餐 KKD STK + BBQ', locationName: 'KKD STK + BBQ', type: 'food', tag: '推薦', lat: 10.29, lng: 123.9, address: 'https://maps.app.goo.gl/m2TPWTTBartPytNJ6?g_st=ic' },
+                    { id: '2-8', date: '2026-02-12', time: '18:00', title: '晚餐 KKD STK + BBQ', locationName: 'KKD STK + BBQ', type: 'food', tag: '推薦', lat: 10.29, lng: 123.9, address: 'M.J. Cuenco Avenue, opposite Fort San Pedro, Cebu City, 6000 Cebu' },
                     
                     // Day 3
                     { id: '3-1', date: '2026-02-13', time: '10:40', title: '抵達港口 Pier 1', locationName: 'Cebu Pier 1', type: 'note', tag: '買午餐', lat: 10.291, lng: 123.905, address: 'Cebu Port Pier 1' },
@@ -418,7 +418,7 @@
                     // Day 5
                     { id: '5-0', date: '2026-02-15', time: '06:00', title: '跳島一日遊', locationName: 'Balicasag Island', type: 'spot', tag: '包船', lat: 9.518, lng: 123.680, address: 'Balicasag Island, Bohol' },
                     { id: '5-4', date: '2026-02-15', time: '14:30', title: 'Check in Villa', locationName: 'Villa Kalachuchi', type: 'hotel', note: '無早餐有廚房', lat: 9.556, lng: 123.760, address: 'Villa Kalachuchi V.K Resort, Panglao' },
-                    { id: '5-5', date: '2026-02-15', time: '18:00', title: '晚餐 Guitarwoodhouse', locationName: 'Guitarwoodhouse', type: 'food', tag: '推薦', lat: 9.55, lng: 123.75, address: 'Purok 3 Daorong Blvd, Danao, Panglao, Bohol, Philippines' },
+                    { id: '5-5', date: '2026-02-15', time: '18:00', title: '晚餐 Guitarwoodhouse', locationName: 'Guitarwoodhouse', type: 'food', tag: '推薦', lat: 9.55, lng: 123.75, address: 'Guitarwoodhouse, Panglao, Bohol, Philippines' },
                     
                     // Day 6
                     { id: '6-0', date: '2026-02-16', time: '09:00', title: '包車一日遊', locationName: 'Bohol', type: 'transport', lat: 9.696, lng: 124.120, address: 'Bohol' },
