--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                     { id: '2-3', date: '2026-02-12', time: '11:00', title: '午餐 Aqua Dining', locationName: 'Aqua Dining', type: 'food', tag: '需預約', lat: 10.283, lng: 123.882, address: 'Aqua Dining, Cebu Ocean Park' },
                     { id: '2-5', date: '2026-02-12', time: '13:00', title: '古蹟巡禮', locationName: '麥哲倫十字架', type: 'spot', lat: 10.293, lng: 123.901, address: 'Magellan\'s Cross Pavilion, Cebu City' },
                     { id: '2-6', date: '2026-02-12', time: '14:00', title: '古蹟巡禮', locationName: '聖嬰大教堂', type: 'spot', lat: 10.2941085, lng: 123.902, address: 'Minor Basilica of the Holy Child of Cebu (Basilica Minore Del Sto. Niño de Cebu)' },
-                    { id: '2-8', date: '2026-02-12', time: '18:00', title: '晚餐 KKD STK + BBQ', locationName: 'KKD STK + BBQ', type: 'food', tag: '推薦', lat: 10.29, lng: 123.9, address: 'M.J. Cuenco Avenue, opposite Fort San Pedro, Cebu City, 6000 Cebu' },
+                    { id: '2-8', date: '2026-02-12', time: '18:00', title: '晚餐 KKD STK + BBQ', locationName: 'KKD STK + BBQ', type: 'food', tag: '聖佩德羅堡正對面', lat: 10.29, lng: 123.9, address: 'M.J. Cuenco Avenue, opposite Fort San Pedro, Cebu City, 6000 Cebu' },
                     
                     // Day 3
                     { id: '3-1', date: '2026-02-13', time: '10:40', title: '抵達港口 Pier 1', locationName: 'Cebu Pier 1', type: 'note', tag: '買午餐', lat: 10.291, lng: 123.905, address: 'Cebu Port Pier 1' },
