--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                 </div>
 
                 <div class="space-y-0 relative pl-2">
+                    <div v-if="currentDayEvents.length === 0" class="py-20 text-center text-slate-400">目前尚無行程安排</div>
                     <div v-for="(event, index) in currentDayEvents" :key="event.id" class="relative z-10 mb-8 last:mb-0">
                         <div class="flex gap-4 relative">
                             <div class="flex flex-col items-center w-12 shrink-0 pt-1">
@@ -161,15 +162,37 @@
                 ];
 
                 const events = [
+                    // Day 1 (2/11)
                     { id: 1, date: '2026-02-11', time: '13:00', title: '飯店 Check-in', locationName: 'Cebu Parklane', type: 'hotel', address: 'Cebu Parklane International Hotel', note: '寄放行李' },
                     { id: 2, date: '2026-02-11', time: '14:30', title: '換匯 & Ayala 逛街', locationName: 'Ayala Center', type: 'spot', address: 'Ayala Center Cebu', note: '換錢跟網卡' },
-                    { id: 3, date: '2026-02-12', time: '09:00', title: 'Cebu Ocean Park', locationName: 'Ocean Park', type: 'spot', address: 'Cebu Ocean Park', note: '適合小孩' },
-                    { id: 4, date: '2026-02-13', time: '11:40', title: '搭船前往薄荷島', locationName: 'Pier 1', type: 'transport', address: 'Cebu Port Pier 1', note: 'OceanJet' }
+                    // Day 2 (2/12)
+                    { id: 3, date: '2026-02-12', time: '09:00', title: 'Cebu Ocean Park', locationName: '海洋公園', type: 'spot', address: 'Cebu Ocean Park', note: '看魚表演' },
+                    { id: 4, date: '2026-02-12', time: '14:00', title: '市區古蹟巡禮', locationName: '聖嬰大教堂', type: 'spot', address: 'Basilica del Santo Niño', note: '拍照行程' },
+                    // Day 3 (2/13)
+                    { id: 5, date: '2026-02-13', time: '11:40', title: '搭船前往薄荷島', locationName: 'Pier 1', type: 'transport', address: 'Cebu Port Pier 1', note: '搭 OceanJet' },
+                    { id: 6, date: '2026-02-13', time: '15:00', title: '薄荷島飯店 Check-in', locationName: 'Alona Beach', type: 'hotel', address: 'Alona Beach', note: '海邊散步' },
+                    // Day 4 (2/14)
+                    { id: 7, date: '2026-02-14', time: '08:00', title: '沙丁魚風暴 & 洞穴', locationName: 'Panglao', type: 'spot', address: 'Hinagdanan Cave', note: '浮潛行程' },
+                    // Day 5 (2/15)
+                    { id: 8, date: '2026-02-15', time: '06:00', title: '跳島：巴里卡薩島', locationName: 'Balicasag', type: 'spot', address: 'Balicasag Island', note: '看海龜' },
+                    { id: 9, date: '2026-02-15', time: '11:00', title: '處女島白沙灘', locationName: 'Virgin Island', type: 'spot', address: 'Virgin Island', note: '吃海味' },
+                    // Day 6 (2/16)
+                    { id: 10, date: '2026-02-16', time: '09:00', title: '巧克力山 & 眼鏡猴', locationName: '陸地行程', type: 'spot', address: 'Chocolate Hills', note: '薄荷島經典' },
+                    // Day 7 (2/17)
+                    { id: 11, date: '2026-02-17', time: '14:00', title: '搭機前往馬尼拉', locationName: 'Cebu Airport', type: 'transport', address: 'Mactan-Cebu Airport', note: '國內線' },
+                    // Day 8 (2/18)
+                    { id: 12, date: '2026-02-18', time: '11:00', title: 'BGC 逛街漫步', locationName: 'BGC', type: 'spot', address: 'BGC Manila', note: '最後採買' },
+                    { id: 13, date: '2026-02-18', time: '16:00', title: '前往機場返台', locationName: 'MNL Airport', type: 'transport', address: 'Ninoy Aquino Airport', note: '回家囉' }
                 ];
 
                 const currentDayEvents = computed(() => {
                     return events.filter(e => e.date === tripDays[currentDateIndex.value].date).sort((a,b) => a.time.localeCompare(b.time));
                 });
+
+                const changeDate = (idx) => { 
+                    currentDateIndex.value = idx; 
+                    nextTick(() => lucide.createIcons()); 
+                };
 
                 const openGoogleMap = (e) => {
                     const q = encodeURIComponent(e.address || e.locationName);
@@ -194,8 +217,7 @@
                 });
 
                 return {
-                    tripDays, currentDateIndex, currentDayEvents, 
-                    changeDate: (idx) => { currentDateIndex.value = idx; nextTick(() => lucide.createIcons()); },
+                    tripDays, currentDateIndex, currentDayEvents, changeDate,
                     openGoogleMap, activePopup, calcPHP, shoppingList, newShopItem, addShopItem, removeShopItem,
                     openPopup: (t) => { activePopup.value = t; nextTick(() => lucide.createIcons()); },
                     getCategoryName: (c) => ({ spot: '景點', food: '美食', hotel: '住宿', transport: '交通' }[c] || '筆記'),
